# learning_bayesian_networks

./: .gitattributes  LearningBayesianNetworksResources.md  README.md
docs/: LearningBayesianNetworksFigures.pptx  LearningBayesianNetworksNeapolitanNotes.docx  LearningBayesianNetworks_part1.docx  ~$arningBayesianNetworks_part1.docx  ~WRL2105.tmp
src/: pyproject.toml  start_notebook.sh  tunnel_to_remote_host.sh
src/bnlearn-demo/: pyproject.toml
src/bnlearn-demo/tests/: test_bnlearn_demo.py
