[tool.poetry]
name = "tensorflow-experiments"
version = "0.1.0"
description = ""
authors = ["dimitarpg13 <dimitar_pg13@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow-gpu = { version = "2.4", optional = false }
pandas = "^1.2.3"
jupyter = "^1.0.0"
ipykernel = "^5.5.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
